--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,11 +1,11 @@
 @font-face {
-  font-family: "Neue Montreal";
-  src: url("./fonts/NeueMontreal-Regular.woff") format("truetype");
+  font-family: "NeueMontreal-Regular";
+  src: url("../fonts/NeueMontreal-Regular.woff") format("truetype");
   font-weight: 450;
 }
 @font-face {
-  font-family: "Neue Montreal";
-  src: url("./fonts/NeueMontreal-Bold.woff") format("truetype");
+  font-family: "NeueMontreal-Bold";
+  src: url("../fonts/NeueMontreal-Bold.woff") format("truetype");
   font-weight: 800;
 }
 
