--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -28,7 +28,9 @@
 body {
   font-family: var(--default-font-family);
   color: var(--accent-color-c);
-  padding: 30px;
+  padding: 30px 0 30px 0;
+  position: relative;
+  min-height: 100vh;
 }
 
 h1 {
@@ -46,6 +48,14 @@ h3 {
   font-weight: 800;
   text-transform: uppercase;
 }
+.page-container {
+  position: relative;
+  min-height: 100vh;
+}
+.content-wrap {
+  padding-bottom: 2.5rem;
+}
+
 .hero {
   margin-top: 100px;
 }
@@ -108,11 +118,6 @@ nav a:hover {
   color: var(--accent-color-b);
 }
 
-footer p {
-  margin-top: 60px;
-  font-weight: 800;
-  font-size: var(--body-font-size-small);
-}
 .view-more {
   font-family: "NeueMontreal-Bold";
 }
@@ -151,6 +156,17 @@ footer p {
   font-family: var(--bold-font-family);
   font-size: var(--header-font-size-small);
   padding: 20px 0 40px 0;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+}
+footer p {
+  font-weight: 800;
+  font-size: var(--body-font-size-small);
 }
 
 @media (max-width: 991px) {
