--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -121,6 +121,7 @@ nav a {
   display: inline-block;
   text-decoration: none;
   position: relative;
+  padding: 0 1em;
   color: var(--accent-color-c);
   transition: all 100ms ease-in-out;
 }
